{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 151,
  "lineage": "d50eb0a1-1290-4958-6579-1724043be92e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:437574982505:instance/i-09e7e2682185e8969",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e7e2682185e8969",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d232078e18e0635",
            "private_dns": "ip-10-0-1-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-18-206-170-47.compute-1.amazonaws.com",
            "public_ip": "18.206.170.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c396b5161ba77e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0748448b2ab1fed99"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080ba7fcb92226656",
            "tags": {
              "Name": "Altschool-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0748448b2ab1fed99"
            ]
          },
          "dependencies": [
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:437574982505:instance/i-02e1e5265c6f35083",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e1e5265c6f35083",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9ef0a7176d97af0",
            "private_dns": "ip-10-0-2-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.98",
            "public_dns": "ec2-54-91-77-120.compute-1.amazonaws.com",
            "public_ip": "54.91.77.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071eda3dbc20a70f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0748448b2ab1fed99"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc53d28210e174e6",
            "tags": {
              "Name": "Altschool-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0748448b2ab1fed99"
            ]
          },
          "dependencies": [
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:437574982505:instance/i-01ea1e37ca6b5659c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ea1e37ca6b5659c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bafa65066f125573",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-54-227-108-54.compute-1.amazonaws.com",
            "public_ip": "54.227.108.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b9263696622ecfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0748448b2ab1fed99"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080ba7fcb92226656",
            "tags": {
              "Name": "Altschool-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0748448b2ab1fed99"
            ]
          },
          "dependencies": [
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:internet-gateway/igw-0fd4d057eac96cf6b",
            "id": "igw-0fd4d057eac96cf6b",
            "owner_id": "437574982505",
            "tags": {
              "Name": "TerraformIGW"
            },
            "tags_all": {
              "Name": "TerraformIGW"
            },
            "vpc_id": "vpc-015717901674e2f84"
          },
          "dependencies": [
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:loadbalancer/app/load-balancer/b7b1e27d6439dfb7",
            "arn_suffix": "app/load-balancer/b7b1e27d6439dfb7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-119430827.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:loadbalancer/app/load-balancer/b7b1e27d6439dfb7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b10b3e252685fcf7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080ba7fcb92226656"
              },
              {
                "subnet_id": "subnet-0bc53d28210e174e6"
              }
            ],
            "subnets": [
              "subnet-080ba7fcb92226656",
              "subnet-0bc53d28210e174e6"
            ],
            "vpc_id": "vpc-015717901674e2f84",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:listener/app/load-balancer/b7b1e27d6439dfb7/fac135a9f6ca0777",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:listener/app/load-balancer/b7b1e27d6439dfb7/fac135a9f6ca0777",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:loadbalancer/app/load-balancer/b7b1e27d6439dfb7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_lb.load-balancer",
            "aws_lb_target_group.target-group",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:listener-rule/app/load-balancer/b7b1e27d6439dfb7/fac135a9f6ca0777/0b124d9b58c60cca",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:listener-rule/app/load-balancer/b7b1e27d6439dfb7/fac135a9f6ca0777/0b124d9b58c60cca",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:listener/app/load-balancer/b7b1e27d6439dfb7/fac135a9f6ca0777",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_lb.load-balancer",
            "aws_lb_listener.listener",
            "aws_lb_target_group.target-group",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
            "arn_suffix": "targetgroup/target-group/7f1958347b9e1224",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-015717901674e2f84"
          },
          "dependencies": [
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224-20230201165441492700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
            "target_id": "i-09e7e2682185e8969"
          },
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224-20230201165435468100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
            "target_id": "i-02e1e5265c6f35083"
          },
          "dependencies": [
            "aws_instance.Altschool2",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224-20230201165432106200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:437574982505:targetgroup/target-group/7f1958347b9e1224",
            "target_id": "i-01ea1e37ca6b5659c"
          },
          "dependencies": [
            "aws_instance.Altschool3",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group-rule",
            "aws_subnet.public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:network-acl/acl-0819bbf983d0b1137",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0819bbf983d0b1137",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "437574982505",
            "subnet_ids": [
              "subnet-080ba7fcb92226656",
              "subnet-0bc53d28210e174e6"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-015717901674e2f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:route-table/rtb-0723772fee3f95ef7",
            "id": "rtb-0723772fee3f95ef7",
            "owner_id": "437574982505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd4d057eac96cf6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformPublicRT"
            },
            "tags_all": {
              "Name": "TerraformPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-015717901674e2f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002811ad6e7056490",
            "route_table_id": "rtb-0723772fee3f95ef7",
            "subnet_id": "subnet-080ba7fcb92226656"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet1",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a26e80a72b0b47f",
            "route_table_id": "rtb-0723772fee3f95ef7",
            "subnet_id": "subnet-0bc53d28210e174e6"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet2",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:security-group/sg-0b10b3e252685fcf7",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b10b3e252685fcf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "437574982505",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015717901674e2f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:security-group/sg-0748448b2ab1fed99",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0748448b2ab1fed99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b10b3e252685fcf7"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b10b3e252685fcf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "437574982505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-rule"
            },
            "tags_all": {
              "Name": "security-group-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-015717901674e2f84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:subnet/subnet-080ba7fcb92226656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080ba7fcb92226656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437574982505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformPublicSubnet1"
            },
            "tags_all": {
              "Name": "TerraformPublicSubnet1"
            },
            "vpc_id": "vpc-015717901674e2f84"
          },
          "dependencies": [
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:subnet/subnet-0bc53d28210e174e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc53d28210e174e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437574982505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformPublicSubnet2"
            },
            "tags_all": {
              "Name": "TerraformPublicSubnet2"
            },
            "vpc_id": "vpc-015717901674e2f84"
          },
          "dependencies": [
            "aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437574982505:vpc/vpc-015717901674e2f84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d342cd54f0f871cf",
            "default_route_table_id": "rtb-03c1bed3c5eca5dbe",
            "default_security_group_id": "sg-0d874dd78d6e9d0e4",
            "dhcp_options_id": "dopt-088fae1556e154763",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015717901674e2f84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c1bed3c5eca5dbe",
            "owner_id": "437574982505",
            "tags": {
              "Name": "Project_vpc"
            },
            "tags_all": {
              "Name": "Project_vpc"
            }
          }
        }
      ]
    }
  ]
}